--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -1110,7 +1110,7 @@ ul#menu-2-bc4d358 .menu-item-121571>a {
   display: block;
   position: absolute;
   height: 25px;
-  background: #D9D9D9;
+  background-color: #e4e4e4;
   transform: rotate(-0.21deg);
   bottom: -7px;
   z-index: -1;
